# WeGent

./: .env.example  .gitignore  README.md  pyproject.toml
app/: __init__.py  assistant.py  config.py  db.py  llm.py  main.py  safety.py  skills.py  tasks.py  wechat.py
app/static/: home.html  privacy.html  settings.html  site.css  terms.html
tests/: test_assistant.py  test_pages.py  test_safety.py  test_wechat.py
